--- a/server/html/main.html
+++ b/server/html/main.html
@@ -12,8 +12,7 @@
     <div class="container flex flex-wrap justify-between items-center mx-auto">
       <a href="/" class="flex items-center">
         <!-- <img src="/static/logo.svg" class="mr-3 h-6 sm:h-9" alt="HotHost Logo" /> -->
-        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">HotHost</span>
-        🔥 HotHost
+        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">🔥 HotHost</span>
       </a>
       <div class="flex md:order-2">
         <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
